--- a/solution.ipynb
+++ b/solution.ipynb
@@ -6,7 +6,9 @@
         "id": "QsSSIZdFWbku"
       },
       "source": [
-        "# Início"
+        "# Início\n",
+        "\n",
+        "A empresa XYZ, com cerca de 4000 funcionários, enfrenta uma taxa de rotatividade anual de 15%. Esse alto índice de saída prejudica a produtividade, gera custos com recrutamento e treinamento de novos colaboradores. O objetivo é construir um modelo que preveja a probabilidade de um funcionário deixar a empresa, identificando os principais fatores que influenciam essa decisão. Com essas informações, a empresa poderá tomar medidas para melhorar a retenção de talentos e reduzir os impactos da rotatividade."
       ]
     },
     {
@@ -139,6 +141,8 @@
         "29. **YearsSinceLastPromotion**: Número de anos desde a última promoção;\n",
         "30. **YearsWithCurrManager**: Número de anos com o atual gerente.\n",
         "\n",
+        "A coluna \"Attrition\" é a variável dependente. Ela nos indica se o funcionário deixou a empresa no ano anterior ou não. Este é o objetivo do modelo: prever se um funcionário vai deixar a empresa com base nas outras variáveis.\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -156,12 +160,12 @@
         "employees.head()"
       ],
       "metadata": {
-        "id": "r3rf2n-0eTV7",
-        "outputId": "5b70ce8c-0224-4c50-f626-0803f9d9e62e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 325
-        }
+        },
+        "id": "r3rf2n-0eTV7",
+        "outputId": "5b70ce8c-0224-4c50-f626-0803f9d9e62e"
       },
       "execution_count": 18,
       "outputs": [
@@ -639,11 +643,11 @@
         "print(df.count())"
       ],
       "metadata": {
-        "id": "fySPEFZLXxw7",
-        "outputId": "6c657352-d481-4f1f-c28f-51226a1cfa7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "fySPEFZLXxw7",
+        "outputId": "6c657352-d481-4f1f-c28f-51226a1cfa7d"
       },
       "execution_count": 15,
       "outputs": [
