--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1597,7 +1597,7 @@
         "from sklearn.compose import ColumnTransformer\n",
         "\n",
         "preprocessor = Pipeline(steps=[\n",
-        "    ('drop_attrition', column_remover),\n",
+        "    ('drop_column', column_remover),\n",
         "    ('transformer', ColumnTransformer(\n",
         "    transformers=[\n",
         "        ('num', numeric_transformer, numeric_features),\n",
