--- a/solution.ipynb
+++ b/solution.ipynb
@@ -8,7 +8,15 @@
       "source": [
         "# Previsão de Rotatividade de Funcionários\n",
         "\n",
-        "A empresa XYZ, com cerca de 4000 funcionários, enfrenta uma taxa de rotatividade anual de 15%. Esse alto índice de saída prejudica a produtividade, gera custos com recrutamento e treinamento de novos colaboradores. O objetivo é construir um modelo que preveja a probabilidade de um funcionário deixar a empresa, identificando os principais fatores que influenciam essa decisão. Com essas informações, a empresa poderá tomar medidas para melhorar a retenção de talentos e reduzir os impactos da rotatividade."
+        "**Problema**\n",
+        "\n",
+        "A empresa XYZ, com cerca de 4000 funcionários, enfrenta uma taxa de rotatividade anual de 15%. Esse alto índice de saída prejudica a produtividade, gera custos com recrutamento e treinamento de novos colaboradores. O objetivo é construir um modelo que preveja a probabilidade de um funcionário deixar a empresa, identificando os principais fatores que influenciam essa decisão. Com essas informações, a empresa poderá tomar medidas para melhorar a retenção de talentos e reduzir os impactos da rotatividade.\n",
+        "\n",
+        "Esta é uma tarefa de classificação, em que temos que prever se o funcionário irá ou não sair da empresa.\n",
+        "\n",
+        "**Medida de desempenho**\n",
+        "\n",
+        "Neste problema, é alto o custo de falsos negativos (não prever que um funcionário vai sair quando ele realmente vai). Quereremos identificar todos com risco de sair, para poder tomar medidas preventivas. Nesse sentido, estaremos escolhendo o **recall** como métrica principal, visto que ele mede a proporção de funcionários que realmente saíram e que o modelo previu corretamente."
       ]
     },
     {
@@ -1261,11 +1269,11 @@
         "print(cramers_v_matrix)\n"
       ],
       "metadata": {
-        "id": "EBGTu8Y3ieTV",
-        "outputId": "a35e3b9a-4db6-4460-b7bd-004d744e8d91",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EBGTu8Y3ieTV",
+        "outputId": "a35e3b9a-4db6-4460-b7bd-004d744e8d91"
       },
       "execution_count": 173,
       "outputs": [
@@ -1295,6 +1303,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#todo: identificar os principais fatores que influenciam essa decisão"
+      ],
+      "metadata": {
+        "id": "ar4yqk8qy7mF"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1803,6 +1822,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Um dos requisitos do problema é prever a probabilidade de um funcionário deixar a empresa. Levando isso em consideração, precisamos escolher modelos que nos mostre tal probabilidade. Portanto, foram escolhidos **Regressão Logística**, **XGBoost** e **Random Forest**.  "
+      ],
+      "metadata": {
+        "id": "HVGWgFFo2VR8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Regressão Logística**"
       ],
       "metadata": {
@@ -1976,10 +2004,20 @@
     {
       "cell_type": "code",
       "source": [
-        "#todo: criar função que recebe os dados de alguém e retorna qual a probabilidade dela sair ou não"
+        "#todo: criar função que recebe os dados de alguém e retorna qual a probabilidade dela sair ou não\n",
+        "#todo: reforçar os pontos que mais influenciam na saída do funcionário"
       ],
       "metadata": {
         "id": "SblcWZjByVR2"
+      },
+      "execution_count": 178,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "b5XYWMHczFZc"
       },
       "execution_count": null,
       "outputs": []
