--- a/solution.ipynb
+++ b/solution.ipynb
@@ -6,8 +6,12 @@
         "id": "QsSSIZdFWbku"
       },
       "source": [
-        "# Previsão de Rotatividade de Funcionários\n",
-        "\n",
+        "# Previsão de Rotatividade de Funcionários"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Problema**\n",
         "\n",
         "A empresa XYZ, com cerca de 4000 funcionários, enfrenta uma taxa de rotatividade anual de 15%. Esse alto índice de saída prejudica a produtividade, gera custos com recrutamento e treinamento de novos colaboradores. O objetivo é construir um modelo que preveja a probabilidade de um funcionário deixar a empresa, identificando os principais fatores que influenciam essa decisão. Com essas informações, a empresa poderá tomar medidas para melhorar a retenção de talentos e reduzir os impactos da rotatividade.\n",
@@ -16,8 +20,11 @@
         "\n",
         "**Medida de desempenho**\n",
         "\n",
-        "Neste problema, é alto o custo de falsos negativos (não prever que um funcionário vai sair quando ele realmente vai). Quereremos identificar todos com risco de sair, para poder tomar medidas preventivas. Nesse sentido, estaremos escolhendo o **recall** como métrica principal, visto que ele mede a proporção de funcionários que realmente saíram e que o modelo previu corretamente."
-      ]
+        "Neste problema, o custo de falsos negativos (não identificar um funcionário que realmente irá sair) é elevado. O objetivo é identificar todos os funcionários com risco de saída para adotar medidas preventivas. Por isso, escolheremos o **recall** como a métrica principal, pois ele quantifica a proporção de funcionários que realmente saíram e foram corretamente identificados pelo modelo."
+      ],
+      "metadata": {
+        "id": "cQd3C-a55_US"
+      }
     },
     {
       "cell_type": "markdown",
