--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1350,7 +1350,7 @@
       "source": [
         "Começaremos removendo a coluna de `EmployeeID`. Embora seja útil para identificar individualmente os registros de cada funcionário, ela não possui informações que possam ajudar diretamente na predição da rotatividade dos funcionários.\n",
         "\n",
-        "As colunas `Over18`, `StandardHours`, `EmployeeCount` são constantes, iremos removÊ-las também."
+        "As colunas `Over18`, `StandardHours`, `EmployeeCount` são constantes, iremos removê-las também."
       ],
       "metadata": {
         "id": "lM_0Mh15t0Rq"
@@ -1377,7 +1377,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "O dataset possui alguns dados não preenchidos. Veja que `NumCompaniesWorked` possui 19 dados faltantes e `TotalWorkingYears` possui 9 dados faltantes."
+        "O dataset possui alguns dados não preenchidos. Veja que `NumCompaniesWorked` possui 16 dados faltantes e `TotalWorkingYears` possui 9 dados faltantes."
       ],
       "metadata": {
         "id": "tgAOuxFjtzU2"
