--- a/solution.ipynb
+++ b/solution.ipynb
@@ -95,6 +95,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Nesta seção, vamos carregar o nosso conjunto de dados.\n",
+        "\n",
+        "Como estou desenvolvendo diretamente no Colab, quero evitar a necessidade de adicionar o conjunto de dados manualmente. Por isso, implementei a seguinte verificação."
+      ],
+      "metadata": {
+        "id": "X8-SElZM_Mq_"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -171,7 +182,9 @@
         "\n",
         "A coluna \"Attrition\" é a variável dependente. Ela nos indica se o funcionário deixou a empresa no ano anterior ou não. Este é o objetivo do modelo: prever se um funcionário vai deixar a empresa com base nas outras variáveis.\n",
         "\n",
-        "**Observação:** Como o salário mensal está em Rúpias, imagino que esse dataset seja indiano. Observe a coluna \"Education\", existem níveis de educação que não fazem muito sentido no contexto brasileiro: Qual seria a diferença entre Ensino Superior e Bacharelado?. Observando [esta página da Wikipedia](https://en.wikipedia.org/wiki/Higher_education_in_India#Post-secondary_education_stages), imagino que \"College\" se refira ao \"Vocational Degree\", que é equivalente ao curso técnico brasileiro. Já o \"Bachelor\" se refere a um curso de graduação convencional.\n",
+        "**Observação 1:** Como o salário mensal está em Rúpias, imagino que esse dataset seja indiano. Observe a coluna \"Education\", existem níveis de educação que não fazem muito sentido no contexto brasileiro: Qual seria a diferença entre Ensino Superior e Bacharelado?. Observando [esta página da Wikipedia](https://en.wikipedia.org/wiki/Higher_education_in_India#Post-secondary_education_stages), imagino que \"College\" se refira ao \"Vocational Degree\", que é equivalente ao curso técnico brasileiro. Já o \"Bachelor\" se refere a um curso de graduação convencional.\n",
+        "\n",
+        "**Observação 2:** A coluna \"EmployeeCount\" não faz sentido no contexto do conjunto de dados, porque cada registro já representa um único empregado. Posteriormente, é possível verificar que essa coluna é constante com todos os registros iguais a 1. Ela será eventualmente removida.\n",
         "\n",
         "Vejamos as 5 primeiras linhas do dataset:"
       ],
@@ -1160,6 +1173,15 @@
           "execution_count": 151
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Pelos histogramas conseguimos verificar que diversas colunas admitem valores discretos e até mesmo contínuos."
+      ],
+      "metadata": {
+        "id": "zoK_2jM282lg"
+      }
     },
     {
       "cell_type": "code",
