--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2256,9 +2256,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_lbtItpxRNWD",
-        "outputId": "ae7c24ec-55fe-439c-dd7f-996a085c90ff"
+        "outputId": "8318b92a-ccf1-42b4-f966-8ef584bc2645"
       },
-      "execution_count": 41,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -2266,10 +2266,39 @@
           "text": [
             "                     Accuracy  Precision    Recall  F1 Score\n",
             "Regressão Logística  0.847789   0.641026  0.131579  0.218341\n",
-            "XGBoost              1.000000   1.000000  1.000000  1.000000\n"
+            "XGBoost              1.000000   1.000000  1.000000  1.000000\n",
+            "Random Forest        1.000000   1.000000  1.000000  1.000000\n",
+            "SVM                  0.904195   0.991525  0.410526  0.580645\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Random Forest**"
+      ],
+      "metadata": {
+        "id": "2wraKU6FGYWQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "random_forest = RandomForestClassifier(random_state=seed)\n",
+        "\n",
+        "random_forest.fit(employees_prepared, employees_target_encoded)\n",
+        "random_forest_pred = random_forest.predict(employees_prepared)\n",
+        "\n",
+        "compute_and_print_metrics('Random Forest', employees_target_encoded, random_forest_pred)"
+      ],
+      "metadata": {
+        "id": "qdeYJpKpGaG5"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2322,6 +2351,73 @@
       "metadata": {
         "id": "gRyMdFDyb7BL"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "\n",
+        "params = {\n",
+        "    'n_estimators': [50, 100, 200],\n",
+        "    'max_depth': [None, 10, 20, 30],\n",
+        "    'min_samples_split': [2, 5, 10],\n",
+        "    'min_samples_leaf': [1, 2, 4],\n",
+        "    'max_features': ['sqrt', 'log2'],\n",
+        "    'bootstrap': [True, False]\n",
+        "}\n",
+        "\n",
+        "random_search = RandomizedSearchCV(estimator=random_forest, param_distributions=params,\n",
+        "                                   n_iter=100, scoring='recall', cv=10,\n",
+        "                                   random_state=seed, n_jobs=-1)\n",
+        "\n",
+        "\n",
+        "random_search.fit(employees_prepared, employees_target_encoded)\n",
+        "\n",
+        "print(\"Melhores parâmetros encontrados: \", random_search.best_params_)\n",
+        "print(\"Melhor recall: \", random_search.best_score_)"
+      ],
+      "metadata": {
+        "id": "W1Ay7G2mIOdE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "params = {\n",
+        "    'n_estimators': [50, 100, 200],\n",
+        "    'max_depth': [3, 6, 9],\n",
+        "    'learning_rate': [0.01, 0.1, 0.2],\n",
+        "    'subsample': [0.7, 0.8, 1.0],\n",
+        "    'colsample_bytree': [0.7, 0.8, 1.0]\n",
+        "}\n",
+        "\n",
+        "grid_search = RandomizedSearchCV(estimator=xgb, param_grid=param_grid, scoring='recall', cv=5, n_jobs=-1)\n",
+        "\n",
+        "grid_search.fit(employees_prepared, employees_target_encoded)\n",
+        "\n",
+        "print(\"Melhores parâmetros encontrados: \", grid_search.best_params_)\n",
+        "print(\"Melhor recall: \", grid_search.best_score_)"
+      ],
+      "metadata": {
+        "id": "EcgPd3diAxc2",
+        "outputId": "d3f0c055-f22c-483d-c5e7-569d723c6bfa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Best parameters found:  {'colsample_bytree': 1.0, 'learning_rate': 0.2, 'max_depth': 9, 'n_estimators': 200, 'subsample': 0.8}\n",
+            "Best recall:  0.8859649122807018\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
