--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2108,18 +2108,52 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Antes de começar a comparação, precisamos transformar o target atual, que é categórico, em números. Utilizaremos o `LabelEncoder`, que irá mapear cada categoria em um respectivo número, como `{'No': 0, 'Yes': 1}`, gerando um array codificado com esses valores."
+      ],
+      "metadata": {
+        "id": "cnAk_hZjX52R"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.preprocessing import LabelEncoder\n",
         "\n",
         "label_encoder = LabelEncoder()\n",
-        "employees_target_encoded = label_encoder.fit_transform(employees_target)"
+        "employees_target_encoded = label_encoder.fit_transform(employees_target)\n",
+        "\n",
+        "for i, class_name in enumerate(label_encoder.classes_):\n",
+        "    print(f\"{i} -> {class_name}\")"
       ],
       "metadata": {
-        "id": "LJH2BT1CWLqE"
+        "id": "LJH2BT1CWLqE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d44e1c76-c0c4-4e77-d55a-813e61aa2321"
       },
-      "execution_count": 221,
-      "outputs": []
+      "execution_count": 253,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 -> No\n",
+            "1 -> Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A seguir, criamos algumas funções para calcular e exibir diversas métricas de avaliação de desempenho."
+      ],
+      "metadata": {
+        "id": "P-BrnuaoY--F"
+      }
     },
     {
       "cell_type": "code",
@@ -2143,7 +2177,7 @@
       "metadata": {
         "id": "_9YZ0bJAQN2L"
       },
-      "execution_count": 222,
+      "execution_count": 257,
       "outputs": []
     },
     {
@@ -2181,9 +2215,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2K1t3ji1KzHw",
-        "outputId": "f9ce62d4-d201-45ab-913a-e3e256c9d3ca"
+        "outputId": "e594a31d-2ff8-4fa6-91b1-88af35d51611"
       },
-      "execution_count": 223,
+      "execution_count": 258,
       "outputs": [
         {
           "output_type": "stream",
@@ -2221,9 +2255,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "067f8cac-d554-4302-bd9d-81cccc943e02"
+        "outputId": "aa4167d8-9eff-4d41-a01e-9897828309d1"
       },
-      "execution_count": 224,
+      "execution_count": 259,
       "outputs": [
         {
           "output_type": "stream",
@@ -2262,9 +2296,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jM10C4wSYf_",
-        "outputId": "cca3ae7a-0de4-43a6-cb5e-1f3eb35a5ddf"
+        "outputId": "e7a2ab6a-afab-40d4-98cc-520d11ad6dac"
       },
-      "execution_count": 225,
+      "execution_count": 260,
       "outputs": [
         {
           "output_type": "stream",
@@ -2281,10 +2315,34 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Os resultados mostram que o modelo de Random Forest apresenta desempenho perfeito em todas as métricas, mas isso pode ser um indício de estar sofrendo overfitting. O SVM apresenta um bom equilíbrio entre precisão e Accuracy, com um F1 Score de 58.06%, sendo eficaz na identificação de classes positivas, mas ainda com espaço para melhorias. A Regressão Logística, por outro lado, tem um desempenho significativamente mais baixo, com um F1 Score de apenas 21.83%, indicando que não é a melhor escolha para este problema.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "RfhEv1shZfyg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Ajustes e seleção do modelo"
       ],
       "metadata": {
         "id": "gRyMdFDyb7BL"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Utilizaremos o `RandomizedSearch` para melhorar os parâmetros dos nossos modelos de Random Forest e SVM."
+      ],
+      "metadata": {
+        "id": "0DiS8qzWTswu"
       }
     },
     {
@@ -2332,6 +2390,43 @@
     {
       "cell_type": "code",
       "source": [
+        "best_model_rf = random_search_rf.best_estimator_\n",
+        "rf_y_pred = best_model_rf.predict(employees_prepared)\n",
+        "\n",
+        "compute_and_print_metrics('Random Forest (hyper)', employees_target_encoded, rf_y_pred)"
+      ],
+      "metadata": {
+        "id": "8hfZ-d2Gaa_E",
+        "outputId": "fa599dd5-2846-4ce4-8c47-fcabd13e3c80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 264,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                       Accuracy  Precision    Recall  F1 Score\n",
+            "Regressão Logística    0.847789   0.641026  0.131579  0.218341\n",
+            "Random Forest          1.000000   1.000000  1.000000  1.000000\n",
+            "SVM                    0.904195   0.991525  0.410526  0.580645\n",
+            "Random Forest (hyper)  1.000000   1.000000  1.000000  1.000000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "hQKp2GGiaaqL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "params = {\n",
         "    'C': [1, 10],\n",
         "    'kernel': ['linear', 'rbf'],\n",
@@ -2367,6 +2462,37 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "best_model_svm = random_search_svm.best_estimator_\n",
+        "svm_y_pred = best_model_svm.predict(employees_prepared)\n",
+        "\n",
+        "compute_and_print_metrics('SVM (hyper)', employees_target_encoded, svm_y_pred)"
+      ],
+      "metadata": {
+        "id": "EAGURD7Wau0e",
+        "outputId": "7538c2dc-194d-4c39-e61f-4a75c27c74fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 265,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                       Accuracy  Precision    Recall  F1 Score\n",
+            "Regressão Logística    0.847789   0.641026  0.131579  0.218341\n",
+            "Random Forest          1.000000   1.000000  1.000000  1.000000\n",
+            "SVM                    0.904195   0.991525  0.410526  0.580645\n",
+            "Random Forest (hyper)  1.000000   1.000000  1.000000  1.000000\n",
+            "SVM (hyper)            0.998016   1.000000  0.987719  0.993822\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Modelo e teste final"
@@ -2376,26 +2502,25 @@
       }
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "X_test, y_test = test_set.drop(columns=['Attrition']), test_set['Attrition'].copy()"
+        "De acordo com os resultados anteriores, pode-se dizer que o Random Forest teve o melhor desempenho. Portanto, estaremos utilizando ele como modelo final."
       ],
       "metadata": {
-        "id": "HfDK-iWQYIHE"
-      },
-      "execution_count": 232,
-      "outputs": []
+        "id": "TpdPlJPYUoVU"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "label_encoder_final = LabelEncoder()\n",
-        "y_test_encoded = label_encoder_final.fit_transform(y_test)"
+        "X_test, y_test = test_set.drop(columns=['Attrition']), test_set['Attrition'].copy()\n",
+        "\n",
+        "y_test_encoded = label_encoder.fit_transform(y_test)"
       ],
       "metadata": {
-        "id": "UUn6wG64Y5my"
+        "id": "HfDK-iWQYIHE"
       },
-      "execution_count": 233,
+      "execution_count": 251,
       "outputs": []
     },
     {
@@ -2414,9 +2539,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Aqrn-nE02YBz",
-        "outputId": "bad9d88d-1668-45c2-e5b5-21967a4d5417"
+        "outputId": "0a63f521-c474-4e30-f55c-e349d7fedd6a"
       },
-      "execution_count": 239,
+      "execution_count": 247,
       "outputs": [
         {
           "output_type": "stream",
@@ -2427,6 +2552,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O modelo apresenta excelente desempenho, indicando confiabilidade em identificar e confirmar casos positivos (saída de funcionários).\n",
+        "\n",
+        "Para concluir, o seguinte código calcula a probabilidade de um funcionário sair da empresa."
+      ],
+      "metadata": {
+        "id": "dqD_c-yxTTCn"
+      }
     },
     {
       "cell_type": "code",
@@ -2440,7 +2576,7 @@
       "metadata": {
         "id": "SblcWZjByVR2"
       },
-      "execution_count": 238,
+      "execution_count": 248,
       "outputs": []
     },
     {
@@ -2483,9 +2619,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6484b0f5-1da2-4903-88ca-689336b8754b"
+        "outputId": "746da354-49e9-4ae9-aa75-5a3a5e1131e4"
       },
-      "execution_count": 245,
+      "execution_count": 249,
       "outputs": [
         {
           "output_type": "stream",
