medida de desempenho

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -12,15 +12,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Problema**\n",
-        "\n",
         "A empresa XYZ, com cerca de 4000 funcionários, enfrenta uma taxa de rotatividade anual de 15%. Esse alto índice de saída prejudica a produtividade, gera custos com recrutamento e treinamento de novos colaboradores. O objetivo é construir um modelo que preveja a probabilidade de um funcionário deixar a empresa, identificando os principais fatores que influenciam essa decisão. Com essas informações, a empresa poderá tomar medidas para melhorar a retenção de talentos e reduzir os impactos da rotatividade.\n",
         "\n",
-        "Esta é uma tarefa de classificação, em que temos que prever se o funcionário irá ou não sair da empresa.\n",
-        "\n",
-        "**Medida de desempenho**\n",
-        "\n",
-        "Neste problema, o custo de falsos negativos (não identificar um funcionário que realmente irá sair) é elevado. O objetivo é identificar todos os funcionários com risco de saída para adotar medidas preventivas. Por isso, escolheremos o **recall** como a métrica principal, pois ele quantifica a proporção de funcionários que realmente saíram e foram corretamente identificados pelo modelo."
+        "Esta é uma tarefa de classificação, em que temos que prever se o funcionário irá ou não sair da empresa."
       ],
       "metadata": {
         "id": "cQd3C-a55_US"
@@ -2004,7 +1998,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Combinamos todos os pré-processadores em um `ColumnTransformer`. Juntaremos com o processo de remover a coluna feito inicialmente num único Pipeline."
+        "Combinamos todos os pré-processadores em um `ColumnTransformer` e juntaremos com o processo de remover a coluna num único Pipeline."
       ],
       "metadata": {
         "id": "Z_mcXxMqOPbi"
@@ -2149,7 +2143,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "A seguir, criamos algumas funções para calcular e exibir diversas métricas de avaliação de desempenho."
+        "A seguir, criamos algumas funções para calcular e exibir diversas métricas de avaliação de desempenho.\n",
+        "\n",
+        "**Medida de desempenho**\n",
+        "\n",
+        "Neste problema, o custo de falsos negativos (não identificar um funcionário que realmente irá sair) é elevado. O objetivo é identificar todos os funcionários com risco de saída para adotar medidas preventivas. Por isso, escolheremos o **recall** como a métrica principal, pois ele quantifica a proporção de funcionários que realmente saíram e foram corretamente identificados pelo modelo."
       ],
       "metadata": {
         "id": "P-BrnuaoY--F"
@@ -2396,11 +2394,11 @@
         "compute_and_print_metrics('Random Forest (hyper)', employees_target_encoded, rf_y_pred)"
       ],
       "metadata": {
-        "id": "8hfZ-d2Gaa_E",
-        "outputId": "fa599dd5-2846-4ce4-8c47-fcabd13e3c80",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8hfZ-d2Gaa_E",
+        "outputId": "fa599dd5-2846-4ce4-8c47-fcabd13e3c80"
       },
       "execution_count": 264,
       "outputs": [
@@ -2470,11 +2468,11 @@
         "compute_and_print_metrics('SVM (hyper)', employees_target_encoded, svm_y_pred)"
       ],
       "metadata": {
-        "id": "EAGURD7Wau0e",
-        "outputId": "7538c2dc-194d-4c39-e61f-4a75c27c74fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "EAGURD7Wau0e",
+        "outputId": "7538c2dc-194d-4c39-e61f-4a75c27c74fb"
       },
       "execution_count": 265,
       "outputs": [
@@ -2602,10 +2600,10 @@
         "    'YearsAtCompany': 5,\n",
         "    'YearsSinceLastPromotion': 0,\n",
         "    'YearsWithCurrManager': 2,\n",
-        "    'MonthlyIncome': 1000,\n",
+        "    'MonthlyIncome': 5000,\n",
         "    'JobRole': 'Human Resources',\n",
         "    'JobLevel': 1,\n",
-        "    'MaritalStatus': 'Single'\n",
+        "    'MaritalStatus': 'Marriage'\n",
         "}\n",
         "\n",
         "person_df = pd.DataFrame([person_data])\n",
@@ -2619,15 +2617,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "746da354-49e9-4ae9-aa75-5a3a5e1131e4"
+        "outputId": "e82610f3-9e12-4d93-c801-5d1f1a852d6c"
       },
-      "execution_count": 249,
+      "execution_count": 268,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A probabilidade dessa pessoa sair da empresa é 34.50%\n"
+            "A probabilidade dessa pessoa sair da empresa é 29.50%\n"
           ]
         }
       ]
