--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1867,7 +1867,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Ambas as colunas são compostas inteiramentes por dados numéricos. Estaremos preenchendo os itens nulos com a mediana através do `SimpleImputer`. Para isso, criaremos um Pipeline."
+        "Ambas as colunas são compostas inteiramentes por dados numéricos. Estaremos preenchendo os itens nulos com a mediana através do `SimpleImputer`. Para isso, criaremos um Pipeline.\n",
+        "\n",
+        "Já o `StandardScaler` é utilizado para normalizar as variáveis numéricas. Isso é importante em modelos que são sensíveis à escala das variáveis, como a Regressão Logística e Support Vector Machine (SVM). Na etapa seguinte estaremos utilizando esses 2 modelos, além do Random Forest."
       ],
       "metadata": {
         "id": "Pw_Cpz0_tYRD"
@@ -2170,7 +2172,7 @@
         "\n",
         "def compute_and_print_metrics(name, y_true, y_pred):\n",
         "    compute_metrics(name, y_true, y_pred)\n",
-        "    print(metrics)\n"
+        "    print(metrics)"
       ],
       "metadata": {
         "id": "_9YZ0bJAQN2L"
