--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2631,7 +2631,7 @@
         "    'Age': 20,\n",
         "    'BusinessTravel': 'Travel_Rarely',\n",
         "    'Department': 'Human Resources',\n",
-        "    'DistanceFromHome': 3,\n",
+        "    'DistanceFromHome': 1,\n",
         "    'Education': 2,\n",
         "    'EducationField': 'Life Sciences',\n",
         "    'EmployeeCount': 1,\n",
@@ -2642,15 +2642,15 @@
         "    'PercentSalaryHike': 21,\n",
         "    'StandardHours': 8,\n",
         "    'StockOptionLevel': 1,\n",
-        "    'TotalWorkingYears': 10.0,\n",
+        "    'TotalWorkingYears': 1.0,\n",
         "    'TrainingTimesLastYear': 1,\n",
-        "    'YearsAtCompany': 5,\n",
-        "    'YearsSinceLastPromotion': 0,\n",
-        "    'YearsWithCurrManager': 2,\n",
-        "    'MonthlyIncome': 5000,\n",
-        "    'JobRole': 'Human Resources',\n",
+        "    'YearsAtCompany': 1,\n",
+        "    'YearsSinceLastPromotion': 2,\n",
+        "    'YearsWithCurrManager': 0,\n",
+        "    'MonthlyIncome': 50000,\n",
+        "    'JobRole': 'Researsh Scientist',\n",
         "    'JobLevel': 1,\n",
-        "    'MaritalStatus': 'Marriage'\n",
+        "    'MaritalStatus': 'Single'\n",
         "}\n",
         "\n",
         "person_df = pd.DataFrame([person_data])\n",
@@ -2664,15 +2664,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d94e1288-013c-4da9-b905-9f5ea4b89bb0"
+        "outputId": "7fe20e49-d776-46bb-db8a-beed995d43d1"
       },
-      "execution_count": 181,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "A probabilidade dessa pessoa sair da empresa é 27.50%\n"
+            "A probabilidade dessa pessoa sair da empresa é 84.67%\n"
           ]
         }
       ]
@@ -2680,7 +2680,6 @@
     {
       "cell_type": "code",
       "source": [
-        "import matplotlib.pyplot as plt\n",
         "importances = final_model.feature_importances_\n",
         "\n",
         "importances_df = pd.DataFrame({\n",
@@ -2710,9 +2709,9 @@
           "height": 745
         },
         "id": "t6BEFx_qIF7j",
-        "outputId": "2c0b534c-2669-4a95-9e9d-7f2d709020b9"
+        "outputId": "350754ff-c9bb-46d2-88d2-9ff3613db96a"
       },
-      "execution_count": 182,
+      "execution_count": 196,
       "outputs": [
         {
           "output_type": "display_data",
