--- a/solution.ipynb
+++ b/solution.ipynb
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "CzaS0D8laGLW"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "1jWfZiEiaIpN"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "d_x-GL8eWher"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
         "id": "r3rf2n-0eTV7",
         "outputId": "70930b9a-4ffa-4d5b-a478-286aa098e453"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -636,7 +636,7 @@
         "id": "LDGVKKvYlnRv",
         "outputId": "9e8dc83b-dfd9-4d25-9c20-c00740c4128f"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +690,7 @@
         "id": "X43qKcUqlwGu",
         "outputId": "e3f67ade-0b88-4a84-a8e8-11642ea2544d"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1184,7 +1184,7 @@
         "id": "qG24zoA6mT_D",
         "outputId": "d62403c4-a294-43dd-c9f6-2e81016423d2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1225,7 +1225,7 @@
         },
         "outputId": "8e4bebd2-64e5-4577-d48f-6b608a5dc58b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1265,7 +1265,7 @@
       "metadata": {
         "id": "YN7PUzeKbaO2"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1297,7 +1297,7 @@
           "height": 1000
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1346,7 +1346,7 @@
           "height": 481
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1384,7 +1384,7 @@
           "height": 481
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1422,7 +1422,7 @@
           "height": 481
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1471,7 +1471,7 @@
           "height": 481
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1505,7 +1505,7 @@
           "height": 565
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2204,7 +2204,7 @@
           "height": 628
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2241,7 +2241,7 @@
         "id": "I9igOsVWd-lr",
         "outputId": "5dc83ed7-0911-4273-f994-99be227b2099"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2337,7 +2337,7 @@
       "metadata": {
         "id": "HK0nhyj82AVp"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2363,7 +2363,7 @@
         "id": "XHUggNVe2VRb",
         "outputId": "1d553349-37d5-4cdb-b069-351297feecab"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2392,7 +2392,7 @@
       "metadata": {
         "id": "Lgh7UPQ4uQ6x"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2417,7 +2417,7 @@
         },
         "outputId": "42281e58-fe5f-46be-9902-65cbd2cda21d"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2606,7 +2606,7 @@
       "metadata": {
         "id": "xS3aVwKStmCM"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2635,7 +2635,7 @@
         },
         "outputId": "60d23027-3f6c-4604-e127-35cc3ddf57ce"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2703,7 +2703,7 @@
       "metadata": {
         "id": "Efws7u1DMw_V"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2736,7 +2736,7 @@
       "metadata": {
         "id": "-AqquoRiOWeN"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2751,7 +2751,7 @@
         },
         "outputId": "57d6d4c4-6e28-49dd-ab09-321ecb07ff40"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2789,7 +2789,7 @@
         },
         "outputId": "9e0a18ac-ca1a-41a1-832a-92c281a124d4"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2827,7 +2827,7 @@
         "id": "8lJE-g2BEw63",
         "outputId": "8cfa5c42-dff4-45a1-c7b5-cf9863aec473"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2912,7 +2912,7 @@
         },
         "outputId": "2863e25c-e88b-426b-9d51-5b535ebc9b4e"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2947,7 +2947,7 @@
         "id": "m9YKgtA_87YH",
         "outputId": "aa14b6a1-5e1d-43ee-935d-effca9dcfab1"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3034,7 +3034,7 @@
       "metadata": {
         "id": "qWmBjCMm3LSD"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3062,7 +3062,7 @@
         "id": "2K1t3ji1KzHw",
         "outputId": "0ee74671-b738-4b04-c17f-1718996b7978"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3100,7 +3100,7 @@
         },
         "outputId": "fa0cb8cc-3a56-4bd0-b514-752fb7aa80a3"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3138,7 +3138,7 @@
         "id": "2jM10C4wSYf_",
         "outputId": "69a35a6c-3017-4880-d128-2453ca318d54"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3212,7 +3212,7 @@
         },
         "outputId": "7b1cdbc7-d8e5-492f-fe1a-0246ad37c4f9"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3260,7 +3260,7 @@
       "metadata": {
         "id": "_9YZ0bJAQN2L"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3273,7 +3273,7 @@
       "metadata": {
         "id": "HfDK-iWQYIHE"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3294,7 +3294,7 @@
         "id": "Aqrn-nE02YBz",
         "outputId": "6be37a0d-00a7-4615-dc81-0710f67c0dd5"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3311,7 +3311,7 @@
       "source": [
         "Esses resultados evidenciam que o modelo final é altamente eficiente e pode ser considerado uma solução robusta para a tarefa de classificação em questão.\n",
         "\n",
-        "Além disso, é preciso verificar quais fatores possuem maior influência na saída do funcionário:"
+        "Além disso, é preciso verificar quais fatores possuem maior influência na saída do funcionário. O Random Forest consegue nos mostrar isso através do `feature_importances_`."
       ],
       "metadata": {
         "id": "dqD_c-yxTTCn"
@@ -3351,7 +3351,7 @@
         "id": "t6BEFx_qIF7j",
         "outputId": "d315ec8e-c7d3-438d-a033-da9178915eb0"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3366,6 +3366,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Para complementar, criei uma função que recebe os dados de uma pessoa, e retorna a probabilidade dela sair da empresa:"
+      ],
+      "metadata": {
+        "id": "wI6_MrCNzSlR"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "def predict_probability(model, person_data):\n",
@@ -3377,7 +3386,7 @@
       "metadata": {
         "id": "SblcWZjByVR2"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3413,7 +3422,7 @@
         "\n",
         "probability = predict_probability(final_model, person_df)\n",
         "\n",
-        "print(f\"A probabilidade dessa pessoa sair da empresa é {(probability*100):.2f}%\")\n"
+        "print(f\"A probabilidade dessa pessoa sair da empresa é {(probability*100):.2f}%\")"
       ],
       "metadata": {
         "id": "b5XYWMHczFZc",
@@ -3422,7 +3431,7 @@
         },
         "outputId": "41066d52-48d1-411a-982d-3e3da20296f6"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
