--- a/solution.ipynb
+++ b/solution.ipynb
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "CzaS0D8laGLW"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -76,7 +76,7 @@
       "metadata": {
         "id": "1jWfZiEiaIpN"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +108,7 @@
       "metadata": {
         "id": "d_x-GL8eWher"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -192,7 +192,7 @@
         "id": "r3rf2n-0eTV7",
         "outputId": "9df06dd0-cda5-46ea-d8a7-35c15272192f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -645,7 +645,7 @@
         "id": "LDGVKKvYlnRv",
         "outputId": "84794315-1802-4cfb-b6fe-28410df40fe8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,7 +699,7 @@
         "id": "X43qKcUqlwGu",
         "outputId": "9cdc8f52-d247-4cfc-a634-8e583993dcfb"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1193,7 +1193,7 @@
         "id": "qG24zoA6mT_D",
         "outputId": "4f1da281-21a3-41c9-9dcf-1835e4bccb21"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1234,7 +1234,7 @@
         },
         "outputId": "9d0c7d4a-bd5a-4f65-c137-2bcbce504e45"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1274,7 +1274,7 @@
       "metadata": {
         "id": "YN7PUzeKbaO2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1306,7 +1306,7 @@
           "height": 1000
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1355,7 +1355,7 @@
           "height": 481
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1393,7 +1393,7 @@
           "height": 481
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1431,7 +1431,7 @@
           "height": 481
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1469,7 +1469,7 @@
           "height": 481
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1511,7 +1511,7 @@
           "height": 481
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1550,7 +1550,7 @@
           "height": 628
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1587,7 +1587,7 @@
         "id": "I9igOsVWd-lr",
         "outputId": "afb3797d-b437-4ae7-e60f-3dae6d816c2c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1683,7 +1683,7 @@
       "metadata": {
         "id": "HK0nhyj82AVp"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1709,7 +1709,7 @@
         "id": "XHUggNVe2VRb",
         "outputId": "4faf664b-4df5-4ec3-cbb6-c868cab8eb39"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1738,7 +1738,7 @@
       "metadata": {
         "id": "Lgh7UPQ4uQ6x"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1763,7 +1763,7 @@
         },
         "outputId": "dad9b4d1-3914-41e6-bc40-b2044e8fe0ea"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1952,7 +1952,7 @@
       "metadata": {
         "id": "xS3aVwKStmCM"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1981,7 +1981,7 @@
         },
         "outputId": "fe0f3fdb-6fc5-4ae7-a48a-60801285ae68"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2049,7 +2049,7 @@
       "metadata": {
         "id": "Efws7u1DMw_V"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2082,7 +2082,7 @@
       "metadata": {
         "id": "-AqquoRiOWeN"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2097,7 +2097,7 @@
         },
         "outputId": "644d8199-67d7-469e-d6d6-5b44f2ccbd05"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2135,7 +2135,7 @@
         },
         "outputId": "07821df8-65cb-4050-81bd-862d4ae0c3a8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2173,7 +2173,7 @@
         "id": "8lJE-g2BEw63",
         "outputId": "7e399d50-7b64-4581-e72a-1b0e2624eb82"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2258,7 +2258,7 @@
         },
         "outputId": "34245934-3fe2-4b41-9e90-e01fae0b33de"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2293,7 +2293,7 @@
         "id": "m9YKgtA_87YH",
         "outputId": "3816cb39-cb78-4a89-f242-e2c100818867"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2380,7 +2380,7 @@
       "metadata": {
         "id": "qWmBjCMm3LSD"
       },
-      "execution_count": 31,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -2399,24 +2399,29 @@
         "\n",
         "logistic = LogisticRegression(random_state=seed)\n",
         "\n",
-        "cross_validate(logistic, employees_prepared, employees_target_encoded)"
+        "logistic_pipeline = Pipeline(steps=[\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('classifier', logistic)\n",
+        "])\n",
+        "\n",
+        "cross_validate(logistic_pipeline, employees, employees_target_encoded)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2K1t3ji1KzHw",
-        "outputId": "9d9f712e-14e8-4d31-e4b1-afeb40d08289"
+        "outputId": "3fc98665-c2f4-41bd-9978-641f9a41864b"
       },
-      "execution_count": 32,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.845 (+/- 0.012)\n",
-            "Precision: 0.812 (+/- 0.029)\n",
-            "Recall: 0.845 (+/- 0.012)\n"
+            "Accuracy: 0.845 (+/- 0.013)\n",
+            "Precision: 0.812 (+/- 0.031)\n",
+            "Recall: 0.845 (+/- 0.013)\n"
           ]
         }
       ]
@@ -2437,16 +2442,21 @@
         "\n",
         "random_forest = RandomForestClassifier(random_state=seed)\n",
         "\n",
-        "cross_validate(random_forest, employees_prepared, employees_target_encoded)"
+        "random_forest_pipeline = Pipeline(steps=[\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('classifier', random_forest)\n",
+        "])\n",
+        "\n",
+        "cross_validate(random_forest_pipeline, employees, employees_target_encoded)"
       ],
       "metadata": {
         "id": "qdeYJpKpGaG5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "626534e5-a166-4dbc-d867-e8fa61b58d01"
+        "outputId": "5fc3b2ea-cbb1-410f-ff9d-40acb31a8397"
       },
-      "execution_count": 33,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -2475,24 +2485,29 @@
         "\n",
         "svm = SVC(probability=True, random_state=seed)\n",
         "\n",
-        "cross_validate(svm, employees_prepared, employees_target_encoded)"
+        "svm_pipeline = Pipeline(steps=[\n",
+        "    ('preprocessor', preprocessor),\n",
+        "    ('classifier', svm)\n",
+        "])\n",
+        "\n",
+        "cross_validate(svm_pipeline, employees, employees_target_encoded)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jM10C4wSYf_",
-        "outputId": "fca56478-4f15-4d7b-d33e-a768faecfdc5"
+        "outputId": "3f309b3e-eeef-4e8f-8318-57ba6fa8e9f5"
       },
-      "execution_count": 34,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 0.870 (+/- 0.015)\n",
+            "Accuracy: 0.869 (+/- 0.015)\n",
             "Precision: 0.877 (+/- 0.021)\n",
-            "Recall: 0.870 (+/- 0.015)\n"
+            "Recall: 0.869 (+/- 0.015)\n"
           ]
         }
       ]
@@ -2534,19 +2549,19 @@
         "from sklearn.model_selection import RandomizedSearchCV\n",
         "\n",
         "params = {\n",
-        "    'n_estimators': [50, 100, 200],\n",
-        "    'max_depth': [None, 20, 40],\n",
-        "    'min_samples_split': [2, 5, 10],\n",
-        "    'min_samples_leaf': [1, 2, 4],\n",
-        "    'max_features': ['sqrt', 'log2'],\n",
-        "    'bootstrap': [True, False]\n",
+        "    'classifier__n_estimators': [50, 100, 200],\n",
+        "    'classifier__max_depth': [None, 20, 40],\n",
+        "    'classifier__min_samples_split': [2, 5, 10],\n",
+        "    'classifier__min_samples_leaf': [1, 2, 4],\n",
+        "    'classifier__max_features': ['sqrt', 'log2'],\n",
+        "    'classifier__bootstrap': [True, False]\n",
         "}\n",
         "\n",
-        "random_search_rf = RandomizedSearchCV(estimator=random_forest, param_distributions=params,\n",
+        "random_search_rf = RandomizedSearchCV(estimator=random_forest_pipeline, param_distributions=params,\n",
         "                                   n_iter=10, scoring=weighted_recall, cv=10,\n",
         "                                   random_state=seed, n_jobs=-1)\n",
         "\n",
-        "random_search_rf.fit(employees_prepared, employees_target_encoded)\n",
+        "random_search_rf.fit(employees, employees_target_encoded)\n",
         "\n",
         "print(\"Melhores parâmetros encontrados: \", random_search_rf.best_params_)\n",
         "print(\"Melhor recall: \", random_search_rf.best_score_)"
@@ -2556,16 +2571,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "215beb9a-ecfa-46ba-fc23-ee4ff4963cec"
+        "outputId": "476c7c59-5f26-493c-9e8e-9da36b743444"
       },
-      "execution_count": 35,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Melhores parâmetros encontrados:  {'n_estimators': 50, 'min_samples_split': 5, 'min_samples_leaf': 1, 'max_features': 'sqrt', 'max_depth': 20, 'bootstrap': False}\n",
-            "Melhor recall:  0.9889462078289982\n"
+            "Melhores parâmetros encontrados:  {'classifier__n_estimators': 50, 'classifier__min_samples_split': 5, 'classifier__min_samples_leaf': 1, 'classifier__max_features': 'sqrt', 'classifier__max_depth': 20, 'classifier__bootstrap': False}\n",
+            "Melhor recall:  0.9895127800669586\n"
           ]
         }
       ]
@@ -2606,7 +2621,7 @@
       "metadata": {
         "id": "_9YZ0bJAQN2L"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2619,16 +2634,14 @@
       "metadata": {
         "id": "HfDK-iWQYIHE"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_test_prepared = preprocessor.fit_transform(X_test)\n",
-        "\n",
         "final_model = random_search_rf.best_estimator_\n",
-        "final_pred = final_model.predict(X_test_prepared)\n",
+        "final_pred = final_model.predict(X_test)\n",
         "\n",
         "compute_metrics('Final Model', y_test_encoded, final_pred)\n",
         "print(metrics)"
@@ -2638,9 +2651,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Aqrn-nE02YBz",
-        "outputId": "f41ea50a-c88f-4c90-a8da-e5eacaa0c4d5"
+        "outputId": "88ee1335-e6ff-4697-c982-c879fa848f09"
       },
-      "execution_count": 38,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
@@ -2697,7 +2710,7 @@
         "id": "t6BEFx_qIF7j",
         "outputId": "9cbe5190-26c7-46c4-bfc4-08edb85bab4e"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2732,7 +2745,7 @@
       "metadata": {
         "id": "SblcWZjByVR2"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2777,7 +2790,7 @@
         },
         "outputId": "0286c7c2-bdc6-48cd-ec23-b474d9ea4c3c"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
