--- a/solution.ipynb
+++ b/solution.ipynb
@@ -2666,6 +2666,41 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "print(\"Classification Report:\")\n",
+        "print(classification_report(y_test_encoded, final_pred))"
+      ],
+      "metadata": {
+        "id": "EGXhHOXCh3x4",
+        "outputId": "a0a946fb-57a0-46bf-f367-6070c92e1046",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.99      1.00      1.00       741\n",
+            "           1       1.00      0.96      0.98       141\n",
+            "\n",
+            "    accuracy                           0.99       882\n",
+            "   macro avg       1.00      0.98      0.99       882\n",
+            "weighted avg       0.99      0.99      0.99       882\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "Esses resultados evidenciam que o modelo final é altamente eficiente e pode ser considerado uma solução robusta para a tarefa de classificação em questão.\n",
